k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      backend: database
  template:
    metadata:
      labels:
        backend: database
    spec:
      # volumes:
      #   - name: postgres-storage
      #     persistentVolumeClaim:
      #       claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          # volume to be used in the container
          # volumeMounts:
          #   - name: postgres-storage
          #     mountPath: /var/lib/postgresql/data
          #     subPath: postgres # specific to postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    backend: database
  ports:
    - port: 5432
      targetPort: 5432
