k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      backend: mobile-wallet
  template:
    metadata:
      labels:
        backend: mobile-wallet
    spec:
      containers:
        - name: mobile-wallet
          image: lowjiewei/mobile-wallet-be:v1.1
          ports:
            - containerPort: 8080
---
# Used for Production environment
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    backend: mobile-wallet
  ports:
    - port: 8080 # ClusterIP Service port
      targetPort: 8080 # Forward traffic to this Pod on this targetPort

# # Used for DEV purposes to test connection to server from Postman
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-nodeport-service
# spec:
#   type: NodePort
#   ports:
#     - port: 8080
#       targetPort: 8080
#       nodePort: 31500
#       protocol: TCP
#   selector:
#     backend: mobile-wallet
