k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: backend-cluster-ip-service
                port:
                  number: 8080
